fix invisible text on button and make some more backgrounds transparent

--- a/StarryNight/user.css
+++ b/StarryNight/user.css
@@ -44,7 +44,7 @@
 }
 
 .Root__nav-bar {
-  background-color: var(--spice-main) !important;
+  background-color: #00000000 !important;
 }
 
 .main-trackList-trackListRow:hover {
@@ -56,9 +56,50 @@
 }
 
 .rX_OmqCngvY5ZCoYBZgb {
-  background-color: var(--background-base) !important;
+  background-color: #00000000 !important;
 }
 
+.main-yourLibraryX-entryPoints {
+  background-color: #00000000 !important;
+}
+
+.marketplace-header {
+  background-color: #00000000 !important;
+}
+
+.EmeHQXR87mUskYK6xEde {
+  background-color: #00000000 !important;
+}
+
+.lyrics-lyrics-background {
+  background-color: #00000000 !important;
+}
+
+.main-actionBarBackground-background {
+  background-image: linear-gradient(rgba(var(--spice-rgb-shadow), .6) 0, #000000 100%), #00000000 !important;
+  animation: none !important;
+  -webkit-animation: none !important;
+}
+
+.main-entityHeader-background.main-entityHeader-overlay {
+  background-image: none !important;
+  animation: none !important;
+  -webkit-animation: none !important;
+}
+
+.main-entityHeader-background.main-entityHeader-overlay:after {
+  background-image: none !important;
+  animation: none !important;
+  -webkit-animation: none !important;
+}
+
+.pUNc2aOeOQANHrhYa1GU .RDZ61ETnag1ilfZTkVxe {
+  color: #000000 !important;
+}
+
+.playlist-playlist-playlistContent {
+  background: #00000000 !important;
+}
 
 .main-nowPlayingBar-nowPlayingBar {
   min-height: 400px;
@@ -76,6 +117,14 @@
 
 [data-right-sidebar-hidden] .Root__main-view {
   grid-area: main-view/main-view/main-view/span 1;
+}
+
+.Root__main-view {
+  background-color: #00000000 !important;
+}
+
+.main-home-homeHeader {
+  background-image: linear-gradient(rgba(var(--spice-rgb-shadow), .6) 0, #00000000 100%), var(--background-noise);
 }
 
 .main-nowPlayingBar-center {
@@ -165,6 +214,10 @@
 
 .main-tag-container {
   color: var(--spice-sidebar);
+}
+
+.ffFwfKcPDbmAPLXzxzKq {
+  background-color: #00000000 !important;
 }
 
 @keyframes twinkle1 {
